--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "tsc": "tsc",
     "tsc:watch": "tsc -w",
     "webpack:build": "webpack --config webpack.config.js",
@@ -26,6 +27,8 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.4",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
@@ -60,8 +63,12 @@
     "transformIgnorePatterns": [
       "/node_modules/(?!(xxxx.*?\\.js$))"
     ],
+    "testEnvironment": "jsdom",
     "testMatch": [
       "**/tests/**/*.test.+(ts|tsx|js)"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
     ],
     "testPathIgnorePatterns": [
       "/node_modules/"
@@ -70,6 +77,7 @@
       "ts",
       "tsx",
       "js",
+      "jsx",
       "json"
     ],
     "moduleNameMapper": {
